--- a/src/app/admin/current-artist/current-artist.component.html
+++ b/src/app/admin/current-artist/current-artist.component.html
@@ -1,19 +1,18 @@
 <div class="container">
-  <div class="row">
+  <div class="row" >
 
-    <div class="card col-md-4" style="width:400px;" *ngFor="let artist of verifiedArtists">
-      <img class="card-img-top" [src]="artist.profile.profilepic" width="300" height="200" alt="profile picture">
-      <div class="card-body">
-        <h4 class="card-title">{{ artist.fullName }}</h4>
-        <p class="card-text">Email: {{ artist.email }}</p>
-        <p class="card-text">Expert: {{ artist.profile.expert }}</p>
-        <p class="card-text">Role: {{ artist.profile.role }}</p>
-        <p class="card-text">Phone Number: {{ artist.phone }}</p>
+  <div class="card card--big" *ngFor="let artist of verifiedArtists">
+      <img class="card__image" [src]="artist.profile.profilepic"  alt="profile picture">
+  
+        <h2 class="card__title">{{ artist.fullName }}</h2>
+        <p class="card__text"> <a>Email: {{ artist.email }}</a><br>
+            <a>Expert: {{ artist.profile.expert }}</a><br>
+            <a>Role: {{ artist.profile.role }}</a><br>
+            <a>Phone Number: {{ artist.phone }}</a><br></p>
 
-      </div>
+     
 
     </div>
 
   </div>
 </div>
-
