--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
     <app-sidebar></app-sidebar>
   </nav>
 
-  <nav id="content">
+  <nav id="content" style="margin: auto">
     <router-outlet></router-outlet>
   </nav>
 </div>
