--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -41,7 +41,7 @@
     
           <div class="form-group">
             <label for="userType">User Type:
-              <select class="form-control" formControlName="userType">
+              <select class="form-control" formControlName="userType" style="height:50px">
                 <option value="artist">Artist</option>
                 <option value="customer" [selected]="true">Customer</option>
               </select>
