--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,36 +1,36 @@
 <div class="container-fluid">
     <div class="row">
-      <div class="col-md-9">
+   
         
-        <ngb-carousel *ngIf="images">
+        <ngb-carousel *ngIf="images" class="fullscreen" >
           <ng-template ngbSlide>
-            <img [src]="images[0]" alt="Random first slide" style="width:1200px; height:500px; max-width: 100%;">
-            <div class="carousel-caption headline">
-              <h3 style="color:white;">Reckless Traveler</h3>
-              <p>Ramesh Xhu</p>
-              <span class="btn btn-primary btn-lg">Shop Now</span>
+            <img [src]="images[0]" alt="Random first slide" class="fullscreen" style="opacity:0.6">
+            <div class="carousel-caption headline" style="top:90px">
+              <h1 style="color:white;">Reckless Traveler</h1>
+              <h3 style="color:white;">Ramesh Xhu</h3>
+              <span class="btn btn-primary btn-lg" style="background-color: rgba(89, 171, 227, 1);color:white; border-radius: 0px; border-color: white">Shop Now</span>
             </div>
           </ng-template>
           <ng-template ngbSlide>
-            <img [src]="images[1]" alt="Random second slide" style="width:1200px; height:500px; max-width: 100%;">
-            <div class="carousel-caption headline">
-              <h3 style="color:white;">Murals</h3>
-              <span class="btn btn-primary btn-lg">Shop Now</span>
+            <img [src]="images[1]" alt="Random second slide" class="fullscreen" style="opacity:0.6" >
+            <div class="carousel-caption headline" style="top:90px">
+              <h1 style="color:white;">Murals</h1>
+              <span class="btn btn-primary btn-lg" style="background-color: rgba(89, 171, 227, 1);color:white; border-radius: 0px; border-color: white">Shop Now</span>
               
             </div>
           </ng-template>
           <ng-template ngbSlide>
-            <img [src]="images[2]" alt="Random third slide" style="width:1200px; height:500px; max-width: 100%;" >
-            <div class="carousel-caption headline">
-              <h3 style="color:white;">Heritages</h3>
-              <span class="btn btn-primary btn-lg">Shop Now</span>
+            <img [src]="images[2]" alt="Random third slide" class="fullscreen" style="opacity:0.6" >
+            <div class="carousel-caption headline" style="top:90px">
+              <h1 style="color:white;">Heritages</h1>
+              <span class="btn btn-primary btn-lg" style="background-color: rgba(89, 171, 227, 1);color:white; border-radius: 0px; border-color: white">Shop Now</span>
              
             </div>
           </ng-template>
         </ngb-carousel>
        
         
-      </div>
+      
 
 <!--Artist of the week -->
 
@@ -40,11 +40,11 @@
                 <div class="card-header">
                     <img src="./assets/images/thumb/kiran.png" class="img-responsive" style="width: 100%">
                     <div class="card-header_overlay text-center">
-                        <span class="pill">Artist of the Week</span>
+                        <span class="pill" style="font-size: 10px;">Artist of the Week</span>
                      </div>
                 </div>
     
-                <div class="page-header text-center" style="padding-top:5px;">
+                <div class="page-header text-center" style="padding-top:25px;">
                   <h4>Kiran Maharjan</h4> 
                 </div>
     
@@ -62,59 +62,60 @@
                 </a>
             </div>
         </div>
+        <div class="col-md-9" style="text-align: center; margin-top:20px">
+                <h3>FEATURED <strong>WATER COLOR ARTS</strong></h3>
+                <div *ngFor = "let product of subcategoryProductsList">
+                        <div class="headline" *ngIf="product.subcategoryProducts.length > 0">
+                            <h3>Featured   <b> {{product.subcategory}} </b> Arts </h3>
+                        </div>
+                        <div class="row" *ngIf="product.subcategoryProducts.length > 0">
+                            <div class="col-md-3 col-sm-6" *ngFor = "let prod of product.subcategoryProducts; let i=index">
+                              <div *ngIf="i < 4">
+                                  <div class="product-page-single">
+                                    <div class="single-product-item">
+                                        <div class="product-image-wrap">
+                                            <a href="#"><img src="{{prod.image}}" alt="Product image" style="width:252px;height: 250px;"></a>
+                                            <div class="product-detail-inner">
+                                                <div class="item-details-overly-info">
+                                                    <ul class="list-inline list-unstyled">
+                                                        <li class="item-add-to-cart"><a href="#" title="Add To Cart"><i class="fa fa-shopping-cart"></i></a></li>
+                                                        <li class="item-wishlist"><a href="#" title="Wish list"><i class="fa fa-heart-o"></i></a></li>
+                                                       <!--  <li class="item-like"><a href="#" title="Like"><i class="fa fa-thumbs-o-up"></i></a></li> -->
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="product-item-details">
+                                            <h2><a href="#">{{prod.Name}}</a><br>{{prod.user.fullName}}</h2>
+                                             
+                                            <div class="price-like-box">
+                                                <div class="pull-left item-price">
+                                                    <!-- <span class="old-price"><del>$50.00</del></span> -->
+                                                    <span class="current-price">{{prod.price}}</span>
+                                                </div>
+                                                <div class="pull-right item-rating">
+                                                    <ul class="list-inline">
+                                                        <li><i class="fa fa-star"></i></li>
+                                                        <li><i class="fa fa-star"></i></li>
+                                                        <li><i class="fa fa-star"></i></li>
+                                                        <li><i class="fa fa-star-o"></i></li>
+                                                        <li><i class="fa fa-star-o"></i></li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                              </div>
+                              <a href="#" *ngIf="i == 4"> Show more</a>
+                            </div>   
+                
+                          </div>
+                    </div>
+            </div>
   <!--End Artist of week-->
   <!-- Display of image according to subcategories -->
-  <div class="container">
-    <div *ngFor = "let product of subcategoryProductsList">
-        <div class="headline" *ngIf="product.subcategoryProducts.length > 0">
-            <h3>Featured   <b> {{product.subcategory}} </b> Arts </h3>
-        </div>
-        <div class="row" *ngIf="product.subcategoryProducts.length > 0">
-            <div class="col-md-3 col-sm-6" *ngFor = "let prod of product.subcategoryProducts; let i=index">
-              <div *ngIf="i < 4">
-                  <div class="product-page-single">
-                    <div class="single-product-item">
-                        <div class="product-image-wrap">
-                            <a href="#"><img src="{{prod.image}}" alt="Product image" style="width:252px;height: 250px;"></a>
-                            <div class="product-detail-inner">
-                                <div class="item-details-overly-info">
-                                    <ul class="list-inline list-unstyled">
-                                        <li class="item-add-to-cart"><a href="#" title="Add To Cart"><i class="fa fa-shopping-cart"></i></a></li>
-                                        <li class="item-wishlist"><a href="#" title="Wish list"><i class="fa fa-heart-o"></i></a></li>
-                                       <!--  <li class="item-like"><a href="#" title="Like"><i class="fa fa-thumbs-o-up"></i></a></li> -->
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="product-item-details">
-                            <h2><a href="#">{{prod.Name}}</a><br>{{prod.user.fullName}}</h2>
-                             
-                            <div class="price-like-box">
-                                <div class="pull-left item-price">
-                                    <!-- <span class="old-price"><del>$50.00</del></span> -->
-                                    <span class="current-price">{{prod.price}}</span>
-                                </div>
-                                <div class="pull-right item-rating">
-                                    <ul class="list-inline">
-                                        <li><i class="fa fa-star"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                        <li><i class="fa fa-star-o"></i></li>
-                                        <li><i class="fa fa-star-o"></i></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-              </div>
-              <a href="#" *ngIf="i == 4"> Show more</a>
-            </div>   
 
-          </div>
-    </div>
-</div>
-      
   <!-- End of Display of Image according to categories -->
 
   </div>
