Product view page added

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -87,7 +87,7 @@
                             </div>
                         </div>
                         <div class="product-item-details">
-                            <h2><a href="#">{{prod.Name}}</a><br>{{prod.user.fullName}}</h2>
+                            <h2><a (click)="viewProductDetail()">{{prod.Name}}</a><br>{{prod.user.fullName}}</h2>
                              
                             <div class="price-like-box">
                                 <div class="pull-left item-price">
