--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -208,7 +208,9 @@ body {
   right: 0;
   bottom: -20px;
 }
-
+.checked {
+    color: orange;
+  }
 
 
 
@@ -372,3 +374,39 @@ body {
   margin-left: -5px;
   list-style: none;
 }
+@media (min-width: 770px)  {
+ .btn{
+    text-transform: uppercase;
+    outline: 0;
+    background: rgba(31, 58, 147, 1);
+    width: 100%;
+    
+    padding: 15px;
+    color: #FFFFFF;
+    font-size: 14px;
+    cursor: pointer;
+    border-width: 12px;
+    border-radius: 2%;
+    border-color:white;
+    margin-left:200%
+ }
+  }
+
+  @media (max-width: 770px)  {
+    .btn{
+       text-transform: uppercase;
+       outline: 0;
+       background: rgba(31, 58, 147, 1);
+       width: 100%;
+       
+       padding: 15px;
+       color: #FFFFFF;
+       font-size: 14px;
+       cursor: pointer;
+       border-width: 12px;
+       border-radius: 2%;
+       border-color:white;
+      
+    }
+     }
+
