--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -75,19 +75,19 @@
                   <div class="product-page-single">
                     <div class="single-product-item">
                         <div class="product-image-wrap">
-                            <a href="#"><img src="{{prod.image}}" alt="Product image" style="width:252px;height: 250px;"></a>
+                            <a ><img src="{{prod.image}}" alt="Product image" style="width:252px;height: 250px;" ></a>
                             <div class="product-detail-inner">
                                 <div class="item-details-overly-info">
                                     <ul class="list-inline list-unstyled">
-                                        <li class="item-add-to-cart"><a href="#" title="Add To Cart"><i class="fa fa-shopping-cart"></i></a></li>
-                                        <li class="item-wishlist"><a href="#" title="Wish list"><i class="fa fa-heart-o"></i></a></li>
+                                        <li class="item-add-to-cart"><a title="Add To Cart"><i class="fa fa-shopping-cart"></i></a></li>
+                                        <li class="item-wishlist"><a title="Wish list"><i class="fa fa-heart-o"></i></a></li>
                                        <!--  <li class="item-like"><a href="#" title="Like"><i class="fa fa-thumbs-o-up"></i></a></li> -->
                                     </ul>
                                 </div>
                             </div>
                         </div>
                         <div class="product-item-details">
-                            <h2><a (click)="viewProductDetail()">{{prod.Name}}</a><br>{{prod.user.fullName}}</h2>
+                            <h2><a id = "{{prod.id}}" (click)="viewProductDetail($event)">{{prod.Name}}</a><br>{{prod.user.fullName}}</h2>
                              
                             <div class="price-like-box">
                                 <div class="pull-left item-price">
