Updated the Product model

--- a/src/app/admin/image-verification/image-verification.component.html
+++ b/src/app/admin/image-verification/image-verification.component.html
@@ -5,6 +5,7 @@
         <div class="card-body">
           <h4 class="card-title">Name: {{ product.Name }}</h4>
           <p class="card-text">Availability: {{ product.availability }}</p>
+          <p class="card-text">Price: {{ product.price }}</p>
   
           <div>
             <button type="button" class="btn btn-primary" data-toggle="modal" [attr.data-target]="'#' + product.id">
@@ -14,7 +15,12 @@
             <div class="modal fade" id="{{product.id}}">
               <div class="modal-dialog">
                 <div class="modal-content">
-                  <p>bla bla bla</p>
+                  <p>Build on: {{ product.buildOn }}</p>
+                  <p>Artist Name: {{ product.user.fullName }}</p>
+                  <p>Artist e-mail: {{ product.user.email }}</p>
+                  <p>Artist Phone number: {{ product.user.Phone }}</p>
+                  <p>Category: {{ product.subCategory.category.Category }}</p>
+                  <p>Sub-category: {{ product.subCategory.subCategory }}</p>
                 </div>
               </div>
             </div>
