navigation links added

--- a/src/app/all-products/all-products.component.html
+++ b/src/app/all-products/all-products.component.html
@@ -23,7 +23,7 @@
                   <div class="price-like-box">
                       <div class="pull-left item-price">
                          <!--  <span class="old-price"><del>$50.00</del></span> -->
-                          <span class="current-price">Rs.3,550.00</span>
+                          <span class="current-price">{{prod.price}}</span>
                       </div>
                       <div class="pull-right item-rating">
                           <ul class="list-inline">
