--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
    
-        
+   <div class="col-md-9" style="padding-top: 2%">    
         <ngb-carousel *ngIf="images" class="fullscreen" >
           <ng-template ngbSlide>
             <img [src]="images[0]" alt="Random first slide" class="fullscreen" style="opacity:0.6">
@@ -30,7 +30,7 @@
         </ngb-carousel>
        
         
-      
+      </div>  
 
 <!--Artist of the week -->
 
@@ -62,11 +62,11 @@
                 </a>
             </div>
         </div>
-        <div class="col-md-9" style="text-align: center;">
+        <div class="col-md-12" style="text-align: center;">
               
             <div *ngFor = "let product of subcategoryProductsList">
                     <div class="headline" *ngIf="product.subcategoryProducts.length > 0">
-                        <h3>Featured   <strong> {{product.subcategory}}  Arts </strong></h3>
+                        <h3>Featured   <strong style="font-weight: bold"> {{product.subcategory}}  Arts </strong></h3>
                     </div>
                     <div class="row" *ngIf="product.subcategoryProducts.length > 0" >
                         <div class="col-md-3 col-sm-6" *ngFor = "let prod of product.subcategoryProducts; let i=index" >
@@ -93,7 +93,7 @@
                                         </div>
                                     </div>
                                     <div class="product-item-details">
-                                        <h2><a href="#"><strong>{{prod.Name}}</strong></a></h2><br><h2>{{prod.user.fullName}}</h2>
+                                        <h2><a href="#"><strong>{{prod.Name}}</strong></a></h2><h2>{{prod.user.fullName}}</h2>
                                          
                                         <div class="price-like-box">
                                             <div class="pull-left item-price">
