--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -212,7 +212,12 @@ body {
     color: orange;
   }
 
-
+  .watermarked{
+    background-image: url("http://placehold.it/100x100/09f/fff.png");
+    position: relative;
+    left: 30px;
+    opacity: 0.5;
+  }
 
 .single-product-item {
     width: 100%;
