--- a/src/app/product-view/product-view.component.css
+++ b/src/app/product-view/product-view.component.css
@@ -185,13 +185,32 @@
   .product-item-details h2 a:hover {
       color: #000;
   }
+  .watermarked {
+    position: relative;
+  }
   
+  .watermarked:after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    background-image: url("https://previews.123rf.com/images/imagecatalogue/imagecatalogue1612/imagecatalogue161203705/68233252-do-not-copy-text-rubber-seal-stamp-watermark-caption-inside-rectangular-shape-with-grunge-design-and.jpg");
+    background-size: 100%;
+    
+    background-repeat: no-repeat;
+    opacity: 0.05;
+  }
  
   
   .item-price span {
       font-size: 16px;
       font-weight: 500;
   }
+
+
   
   .item-price .old-price {
       font-size: 14px;
