--- a/src/app/admin/current-artist/current-artist.component.html
+++ b/src/app/admin/current-artist/current-artist.component.html
@@ -1,18 +1,31 @@
 <div class="container">
-  <div class="row" >
+  <div class="row">
 
-  <div class="card card--big" *ngFor="let artist of verifiedArtists">
-      <img class="card__image" [src]="artist.profile.profilepic"  alt="profile picture">
-  
-        <h2 class="card__title">{{ artist.fullName }}</h2>
-        <p class="card__text"> <a>Email: {{ artist.email }}</a><br>
-            <a>Expert: {{ artist.profile.expert }}</a><br>
-            <a>Role: {{ artist.profile.role }}</a><br>
-            <a>Phone Number: {{ artist.phone }}</a><br></p>
+    <div class="card card--big" *ngFor="let artist of verifiedArtists">
+      <img class="card__image" [src]="artist.profile.profilepic" alt="profile picture">
 
-     
+      <h2 class="card__title">{{ artist.fullName }}</h2>
+      <p class="card__text"> <a>Email: {{ artist.email }}</a><br>
+        <a>Expert: {{ artist.profile.expert }}</a><br>
+        <a>Role: {{ artist.profile.role }}</a><br>
+        <a>Phone Number: {{ artist.phone }}</a><br>
+        <button (click)="setArtistOfWeek(artist.id)"> Make Artist of Week </button>
 
+      </p>
     </div>
 
   </div>
 </div>
+
+
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">{{ message }}!</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click'); ">OK</button>
+  </div>
+</ng-template>
