--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,34 +1,33 @@
 <div class="login-page">
   <div class="banner">Log<strong>IN</strong></div>
-        <div class="form">
-            <form class="" [formGroup] = "signinForm" (ngSubmit)="onSubmit()">
-              <div class="form-group">
-                <label for="email">Email:
-                  <input type="email" name="email"  class="form-control" value="" formControlName="email" (keyup)="showError = false">
-                </label>
-              </div>
-              <div *ngIf="email.invalid && (email.dirty || email.touched)" class="alert alert-danger">
-                Email is required
-              </div>
-          
-          
-              <div class="form-group">
-                <label for="password">Password:
-                  <input type="password" name="password" value=""  class="form-control" placeholder="Password" formControlName="password" (keyup)="showError = false">
-                </label>
-              </div>
+  <div class="form">
+    <form class="" [formGroup]="signinForm" (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <label for="email">Email:
+          <input type="email" name="email" class="form-control" value="" formControlName="email" (keyup)="showError = false">
+        </label>
+      </div>
+      <div *ngIf="email.invalid && (email.dirty || email.touched)" class="alert alert-danger">
+        Email is required
+      </div>
 
-              <div *ngIf="password.invalid && (password.dirty || password.touched)" class="alert alert-danger">
-                Password is required
-              </div>
+      <div class="form-group">
+        <label for="password">Password:
+          <input type="password" name="password" value="" class="form-control" placeholder="Password" formControlName="password"
+            (keyup)="showError = false">
+        </label>
+      </div>
+
+      <div *ngIf="password.invalid && (password.dirty || password.touched)" class="alert alert-danger">
+        Password is required
+      </div>
 
 
-              <div *ngIf="showError" class="alert alert-danger">
-                Invalid username or password
-              </div>
-          
-              <button type="submit" name="button">Login</button>
-            </form>
-          </div>
+      <div *ngIf="showError" class="alert alert-danger">
+        {{ showMessage }}
+      </div>
+
+      <button type="submit" name="button">Login</button>
+    </form>
+  </div>
 </div>
-
