--- a/src/app/admin/account-verification/account-verification.component.css
+++ b/src/app/admin/account-verification/account-verification.component.css
@@ -101,6 +101,24 @@
     transition: width 200ms cubic-bezier(0.075, 0.82, 0.165, 1);
     transition: delay 0.1s;
   }
+  .watermarked {
+    position: relative;
+  }
+  
+  .watermarked:after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    background-image: url("https://previews.123rf.com/images/imagecatalogue/imagecatalogue1612/imagecatalogue161203705/68233252-do-not-copy-text-rubber-seal-stamp-watermark-caption-inside-rectangular-shape-with-grunge-design-and.jpg");
+    background-size: 100%;
+    
+    background-repeat: no-repeat;
+    opacity: 0.05;
+  }
   .card__action-bar {
     -webkit-user-select: none;
        -moz-user-select: none;
