--- a/src/app/admin/image-verification/image-verification.component.html
+++ b/src/app/admin/image-verification/image-verification.component.html
@@ -13,7 +13,7 @@
             
             <div class="modal fade" id="{{product.id}}">
                 <div class="modal-dialog">
-                  <div class="modal-content">
+                  <div class="modal-content" style="padding: 10%">
                     <p>bla bla bla</p>
                   </div>
                 </div>
